Try, IsNull, and IsPresent.

--- a/Carnelian.Tests/Carnelian.Tests.csproj
+++ b/Carnelian.Tests/Carnelian.Tests.csproj
@@ -44,10 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObjectExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Carnelian\Carnelian.csproj">
+      <Project>{5B7E8100-7270-4189-91F9-1601E1B25AFA}</Project>
+      <Name>Carnelian</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
